                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-10-2006 fixed: [ 1577855 ] can't handle some rar files correctly
 - 17-10-2006 updated: norwegian language file.
 - 17-10-2006 fixed: forgot to sort images in root of cbr/cbz files.
 - 15-10-2006 fixed: httpapi TakeScreenShot download parameter now works
 - 15-10-2006 fixed: httpapi GetCurrentSlide now returns "[None]" rather than an empty string if no slide is showing
 - 15-10-2006 changed: httpapi Help command text has been updated and now includes a link  to http://www.xboxmediacenter.com/wiki/index.php?title=WebServerHTTP-API
 - 14-10-2006 fixed: scanning of multipath bookmarks would not prompt for "scan new" or "scan all"
 - 13-10-2006 changed: keymap.xml: reintroduced 'B' as STOP while in videomenu since we didn't have any way to exit out from dvdmenu with controller.
 - 13-10-2006 fixed: http client wouldn't report failure to open on 404 errors from server
 - 11-10-2006 changed: better solution for multichar ftp listings, wich also fixes issues introduced in last attempt
 - 11-10-2006 added: [ 1574092 ] New Infolabel Musicplayer.DiscNumber, thanks to buttergemuese.
 - 11-10-2006 changed: Added building of Textures.xpr to build.bat, and removed Textures.xpr from CVS.
 - 11-10-2006 fixed: Partymode would repeat tracks if the next song was unavailable (server offline etc.)
 - 10-10-2006 fixed: ftp listings didn't do the string charset -> utf8 conversion. ftp listings are not normally utf8 unless requested (and only a few servers support it)
 - 10-10-2006 changed: Increased the seek timeout in RAR to 30 seconds to fix seeking over CCX with slow connection